# log-rift

./: .bandit  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .tailwindrc  404.html  Cargo.toml  Dockerfile  KEYBOARD.md  Makefile  README.md  TODO.md  app.py  config.py  docker-compose.prod.yml  docker-compose.yml  index.html  models.py  requirements.txt  vercel.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
api/: caching.py  config.py  content_negotiation.py  helpers.py  index.py  monitoring.py  pagination.py  ratelimit.py  serializers.py  timezone_utils.py  validators.py
benches/: parser_bench.rs
deploy/: nginx.conf
src/: lib.rs  main.rs
src/analyzer/: aggregator.rs  mod.rs
src/filter/: engine.rs  mod.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs
src/parser/: json.rs  mod.rs  regex.rs  structured.rs
static/: humans.txt  robots.txt
static/css/: custom.css  style.css
static/js/app/: helpers.js  main.js  router.js
static/js/app/models/: task.js
static/js/app/views/: notify.js  task-detail.js  task-item.js  task-list.js  task-progress.js
templates/: index.html
tests/: conftest.py  factories.py  helpers.py  integration_tests.rs  test_deletion.py  test_priority.py  test_updates.py
