[package]
name = "logagg"
version = "0.1.0"
edition = "2021"
description = "A fast, flexible command-line log analyzer"
authors = ["sha-wrks"]
license = "MIT"

[[bin]]
name = "logagg"
path = "src/main.rs"

[lib]
name = "logagg"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
prettytable-rs = "0.10"
rayon = "1.7"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "parser_bench"
harness = false
